# escritura_archivos

./: README.md  configure  configure.ac
.anjuta/: default.profile
.anjuta/session/: anjuta.session  dock-layout.xml
src/: Makefile.am  Makefile.in  datos.h  ejemplo1.c  ejemplo2.c  ejemplo3.c  ejemplo4.c  ejemplo5.c  ejemplo6.c  ejemplo7.c  ejemplo8.c  main.c
