## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = escritura_archivos \
	ejemplo1 \
	Ejemplo2 \
	ejemplo3 \
	ejemplo4 \
	ejemplo5 \
	ejemplo6 \
	ejemplo7 \
	ejemplo8

escritura_archivos_SOURCES = \
	main.c \
	datos.h

escritura_archivos_LDFLAGS = 

escritura_archivos_LDADD = 

ejemplo1_SOURCES =  \
	ejemplo1.c

Ejemplo2_SOURCES =  \
	ejemplo2.c

ejemplo3_SOURCES =  \
	ejemplo3.c

ejemplo4_SOURCES =  \
	ejemplo4.c

ejemplo5_SOURCES =  \
	ejemplo5.c

ejemplo6_SOURCES =  \
	ejemplo6.c

ejemplo7_SOURCES =  \
	ejemplo7.c

ejemplo8_SOURCES =  \
	ejemplo8.c

